syntax = "proto3";

package services.stock.proto.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "services/stock/proto/v1";

service PortfolioService {
  rpc CreatePortfolio(CreatePortfolioRequest) returns (CreatePortfolioResponse) {
    option (google.api.http) = {post: "/api/v1/stock/portfolios", body: "*" };
  }
  rpc GetPortfolios(GetPortfoliosRequest) returns (GetPortfoliosResponse) {
    option (google.api.http) = {get: "/api/v1/stock/portfolios"};
  }
  rpc GetPortfolio(GetPortfolioRequest) returns (GetPortfolioResponse) {
    option (google.api.http) = {get: "/api/v1/stock/portfolios/{PortfolioId}"};
  }
//  rpc UpdatePortfolio(UpdatePortfolioRequest) returns (UpdatePortfolioResponse) {
//    option (google.api.http) = {put: "/api/v1/stock/portfolios/{PortfolioId}", body: "*"};
//  }
//  rpc DeletePortfolio(DeletePortfolioRequest) returns (DeletePortfolioResponse) {
//    option (google.api.http) = {delete: "/api/v1/stock/portfolios/{PortfolioId}"};
//  }
}

/* Create portfolio */
message CreatePortfolioRequest {
  string Name = 1;
  string From = 2;
  string To = 3;
}

message CreatePortfolioResponse {
  Portfolio Portfolio = 1;
}

/* Get portfolios */
message GetPortfoliosRequest {}

message GetPortfoliosResponse {
  repeated Portfolio Portfolios = 1;
}

/* Get portfolio */
message GetPortfolioRequest {
  string PortfolioId = 1;
}

message GetPortfolioResponse {
  Portfolio Portfolio = 1;
  repeated Group Groups = 2;
  repeated Sector Sectors = 3;
  repeated Asset Assets = 4;
}


/* Types */
message Portfolio {
  string Id = 1;
  string Name = 2;
  string From = 3;
  string To = 4;
}

message Group {}

message Sector {}

message Asset {}
